# ledger-event-sourcing

./: .dockerignore  .gitignore  DOMAIN_NOTES.md  Dockerfile  README.md  docker-compose.yml  final_report.md  interm_report.md  pyproject.toml
data/: seed_events.jsonl
datagen/: event_simulator.py  generate_all.py  schema_validator.py
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
ledger/: event_store.py
ledger/domain/: __init__.py  errors.py  handlers.py  streams.py
ledger/registry/: __init__.py  client.py  schema.py
ref_docs/: requirements.md
scripts/: check_db.py  demo_occ_race.py  mcp_occ_agent.py  mcp_occ_setup.py  run_mcp_http.py  run_pipeline.py  seed_dev_stack.py
spec/: README.md  implementation_plan.md  phase3-agents-implementation-plan.md
spec/00-index/: README.md  traceability-matrix.md
spec/01-context/: README.md  glossary.md  non-functional.md  vision-and-scenario.md
spec/02-phase0-reconnaissance/: README.md  domain-reconnaissance-questions.md
src/: event_store.py  gas_town.py  llm_client.py  mcp_server.py  schema.sql  upcasters.py
src/api/: __init__.py  (+4 more)
tests/: __init__.py  conftest.py  pg_helpers.py  test_api_applications.py  test_api_health.py  test_api_pipeline.py  test_applicant_registry_client.py  test_audit_chain_tamper.py  test_domain.py  test_event_store.py  test_gas_town.py  test_integrity.py  test_integrity_pg.py  test_mcp.py  test_narratives.py  test_projections.py  test_schema_and_generator.py  test_seed_dev_stack.py  test_upcasting.py
(+130 files in other folders)
